Fixed overflowing info in recipe cards

--- a/tuc_poc.css
+++ b/tuc_poc.css
@@ -45,6 +45,7 @@ p {
 
 span.no_break {
     white-space: nowrap;
+    display: inline-block;
 }
 
 a {
@@ -438,7 +439,7 @@ span.blog_date_published {
 
 .recipe_card_title_info {
   width : 75%;
-  float : left; 
+  float : left;
 }
 
   body {
